--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,11 @@
-<h1> HELLO BIT </h1>
+<html>
+	<head>
+	<title>welcome to BIT</title>	
+	</head>
+	<bodybgcolor='#221255'><center><b>name:HARSHINI</b> <br>
+					  dept:<i>IT</i><hr/></centre>
+	<h1>BIT with h1</h1>
+	<h2>BIT with h2</h2>
+	<marquee>WELCOME<u><b></marquee></b></u>
+	</body>
+</html>
