--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,8 @@
 	</head>
 	<bodybgcolor='#221255'><center><b>name:HARSHINI</b> <br>
 					  dept:<i>IT</i><hr/></centre>
-	<h1>BIT with h1</h1>
-	<h2>BIT with h2</h2>
+	<h1>BIT</h1>
+	<h2>BIT</h2>
 	<marquee>WELCOME<u><b></marquee></b></u>
 	</body>
 </html>
